change the title to "neat recipe" and listed the links for soup.html and pie.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
   <body>
     <h1>Odin Recipes</h1> 
-      <a href="soup.html">soup</a>
-      
+      <ul>
+        <li><a href="soup.html">soup</a></li>
+        <li><a href="pie.html">pie</a></li>
   
 
   </body>
