change name to "neat recipe" fix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
    <meta charset="UTF-8">
-   <title>recipe for disaster</title>
+   <title>Neat recipes</title>
   </head>
 
   <body>
