add beans.html to list of links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a href="soup.html">soup</a></li>
         <li><a href="pie.html">pie</a></li>
-  
+        <li><a href="beans.html">beans</a></li>
 
   </body>
 
