--- a/pie.html
+++ b/pie.html
@@ -4,7 +4,7 @@
       <body>
           <h3>Tooth ache alert!</h3>
             The power of sweet nature is unresistable. You can hear the euphoric crystals call out your name. The hints of pumpkin scream calling you to decvoure this high class cusine. Pumpkin pie.  
-            <h4>Ingridients-</h4> 
+            <h4>Ingredients-</h4> 
               
             <h4> crust</h4>
 
